<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AgregarGanado"
    tools:showIn="@layout/activity_agregar_ganado">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/todos"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pork" />

            <TextView
                android:id="@+id/label_genero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/genero"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <RadioGroup
                android:id="@+id/grupo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_bias="0.445"
                app:layout_constraintTop_toBottomOf="@+id/label_genero"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:orientation="horizontal"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hembra"
                    android:layout_gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="20dp" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="10dp"
                    android:text="@string/macho"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="10dp" />
            </RadioGroup>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:hint="@string/nombre"
                app:errorEnabled="true"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintTop_toBottomOf="@+id/grupo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="16sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_fecha"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="@string/fecha_nac"
                app:errorEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_nombre"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fecha_nac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:inputType="date"
                    android:maxLines="1"
                    android:textSize="16sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_tipo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/tipo"
                app:layout_constraintTop_toBottomOf="@+id/input_nombre"
                app:layout_constraintLeft_toRightOf="@+id/input_fecha"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp">

                <AutoCompleteTextView
                    android:id="@+id/filled_exposed_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_raza"
                android:layout_width="187dp"
                android:layout_height="wrap_content"
                android:hint="@string/raza"
                app:errorEnabled="true"
                style="@style/Theme.MaterialComponents.Light.DarkActionBar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_fecha"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/raza"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="16sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_peso"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:hint="@string/peso"
                app:errorEnabled="true"
                style="@style/Theme.MaterialComponents.Light.DarkActionBar"
                app:layout_constraintLeft_toRightOf="@+id/input_raza"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tipo"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="18dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/peso"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:textSize="16sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_fecha_compra"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/fecha_compra"
                app:errorEnabled="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_raza"
                android:layout_marginStart="20dp"
                style="@style/Theme.MaterialComponents.Light.DarkActionBar"
                android:layout_marginLeft="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fecha_compra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:inputType="date"
                android:maxLines="1"
                android:textSize="16sp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_numero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:hint="@string/num_crias"
                app:errorEnabled="true"
                style="@style/Theme.MaterialComponents.Light.DarkActionBar"
                app:layout_constraintLeft_toRightOf="@+id/input_fecha_compra"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/input_peso"
                android:layout_marginEnd="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/num_crias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textSize="16sp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/agregar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/agregar"
                app:layout_constraintTop_toBottomOf="@+id/input_fecha_compra"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:background="@drawable/boton_redondeado"
                android:layout_marginBottom="150dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>